# mkdepend

./: .build.yml  Makefile.in  README.md  configure  configure.in  mkdepend.cpp
